--- a/templates/admin/results.html.twig
+++ b/templates/admin/results.html.twig
@@ -22,9 +22,7 @@
             <h1 class='display-1 text-center'>PANNEAU D'ADMINISTRATION</h1>
                 <div class="card">
                 <h1 class="display-2">Gestion des Résultats</h1>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum labore itaque numquam consequatur laudantium nam alias, eveniet sint rem consectetur error. Eos cum magnam dolore explicabo tempore et assumenda odio.
-                </p>
+                <p class='display-5 text-center'>/!\ Under construction /!\</p>
                 </div>
         </main>
     </div>
