--- a/templates/event/new.html.twig
+++ b/templates/event/new.html.twig
@@ -11,12 +11,6 @@
 
     <div id="calendar-holder"></div>
 
-    {% block stylesheets %}
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fullcalendar/core@4.1.0/main.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid@4.1.0/main.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fullcalendar/timegrid@4.1.0/main.min.css">
-{% endblock %}
-
 {% block javascripts %}
     <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/core@4.1.0/main.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/interaction@4.1.0/main.min.js"></script>
@@ -29,6 +23,7 @@
 
             var calendar = new FullCalendar.Calendar(calendarEl, {
                 defaultView: 'dayGridMonth',
+                allDay: false,
                 editable: true,
                 eventSources: [
                     {
@@ -50,6 +45,7 @@
                 plugins: [ 'interaction', 'dayGrid', 'timeGrid' ], // https://fullcalendar.io/docs/plugin-index
                 timeZone: 'UTC',
             });
+            calendar.setOption('locale', 'fr');
             calendar.render();
         });
     </script>
