small html text fix

--- a/templates/admin/events.html.twig
+++ b/templates/admin/events.html.twig
@@ -11,7 +11,7 @@
             <div class="sidebar">
                 <ul>  
                     <a href="{{ path('admin_users') }}"><li id='select_users'>Gestion utilisateur</li></a>
-                    <a href="{{ path('admin_events') }}"><li id='select_event'>event</li></a>
+                    <a href="{{ path('admin_events') }}"><li id='select_event'>News</li></a>
                     <a href="{{ path('admin_teams') }}"><li id='select_teams'>Équipes</li></a>
                     <a href="{{ path('admin_results') }}"><li id='select_results'>Résultats</li></a>
                     <a href="{{ path('admin_events') }}"><li id='select_events'>Évenements</li></a>
