--- a/templates/admin/users.html.twig
+++ b/templates/admin/users.html.twig
@@ -13,7 +13,7 @@
                     <a href="{{ path('admin_news') }}"><li id='select_news'>News</li></a>
                     <a href="{{ path('admin_teams') }}"><li id='select_teams'>Équipes</li></a>
                     <a href="{{ path('admin_results') }}"><li id='select_results'>Résultats</li></a>
-                    <a href="{{ path('admin_users') }}"><li id='select_users'>Évenements</li></a>
+                    <a href="{{ path('admin_users') }}"><li id='select_events'>Évenements</li></a>
                 </ul>
             </div>
         </aside>
