added placeholder buttons for admin inserts

--- a/templates/admin/events.html.twig
+++ b/templates/admin/events.html.twig
@@ -95,6 +95,7 @@
                         </tr>
                     {% endfor %}
                 </table>
+                <button class='btn btn-primary clickable' onclick="window.location='#'">Créer un nouvel Évenement</button>
                 </div>
         </main>
     </div>
