--- a/templates/admin/news.html.twig
+++ b/templates/admin/news.html.twig
@@ -102,6 +102,7 @@
                         </tr>
                     {% endfor %}
                 </table>
+                <button class='btn btn-primary clickable' onclick="window.location='#'">Créer une nouvelle News</button>
                 </div>
         </main>
     </div>
