--- a/templates/admin/teams.html.twig
+++ b/templates/admin/teams.html.twig
@@ -63,6 +63,7 @@
                         </tr>
                     {% endfor %}
                 </table>
+                <button class='btn btn-primary clickable' onclick="window.location='#'">Créer une nouvelle Équipe</button>
                 </div>
         </main>
     </div>
