--- a/templates/admin/users.html.twig
+++ b/templates/admin/users.html.twig
@@ -77,6 +77,7 @@
                         </tr>
                     {% endfor %}
                 </table>
+                <button class='btn btn-primary clickable' onclick="window.location='#'">Créer un nouvel Utilisateur</button>
                 </div>
         </main>
     </div>
