fixed teamController function playerByTeam and stylesheet for calendar

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,9 +10,9 @@
 
             {# to properly display calendar #}
             {# {% if condition %} #}
-            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fullcalendar/core@4.1.0/main.min.css">
+            {# <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fullcalendar/core@4.1.0/main.min.css">
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid@4.1.0/main.min.css">
-            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fullcalendar/timegrid@4.1.0/main.min.css">
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fullcalendar/timegrid@4.1.0/main.min.css"> #}
             {# {% endif %} #}
 
             {{ encore_entry_link_tags('app') }}
