--- a/templates/admin/users.html.twig
+++ b/templates/admin/users.html.twig
@@ -13,7 +13,7 @@
                     <a href="{{ path('admin_news') }}"><li id='select_news'>News</li></a>
                     <a href="{{ path('admin_teams') }}"><li id='select_teams'>Équipes</li></a>
                     <a href="{{ path('admin_results') }}"><li id='select_results'>Résultats</li></a>
-                    <a href="{{ path('admin_users') }}"><li id='select_events'>Évenements</li></a>
+                    <a href="{{ path('admin_users') }}"><li id='select_events'>Événements</li></a>
                 </ul>
             </div>
         </aside>
@@ -24,7 +24,7 @@
                 <table class="table table-striped table-dark table-hover">
                     <thead>
                         <tr>
-                            <th scope=>Id</th>
+                            <th>Id</th>
                             <th>E-mail</th>
                             <th>Role(s)</th>
                             <th>Prénom</th>
@@ -77,7 +77,6 @@
                         </tr>
                     {% endfor %}
                 </table>
-                <button class='btn btn-primary clickable' onclick="window.location='#'">Créer un nouvel Utilisateur</button>
                 </div>
         </main>
     </div>
