--- a/templates/admin/users.html.twig
+++ b/templates/admin/users.html.twig
@@ -6,7 +6,7 @@
 <div class="container-fluid">
     
     <div class="full-height flex align-items-center">
-        {{ include ("include/admin_sidepanel.html.twig") }}
+        {{ include ("include/_admin_sidepanel.html.twig") }}
         <main class="col-md-8 full-height">
             <h1 class='display-1 text-center'>PANNEAU D'ADMINISTRATION</h1>
                 <div class="card">
