--- a/templates/include/_admin_sidepanel.html.twig
+++ b/templates/include/_admin_sidepanel.html.twig
@@ -2,11 +2,13 @@
     <aside class="col-md-3">
         <div class="sidebar">
             <ul>
-                <a href="{{ path('admin_users') }}"><li id='select_users'>Gestion utilisateur</li></a>
+                <a href="{{ path('admin_users') }}"><li id='select_users'>Utilisateurs</li></a>
+                <a href="#"><li id='select_staff'>Staff</li></a>
                 <a href="{{ path('admin_news') }}"><li id='select_news'>News</li></a>
+                <a href="#"><li id='select_players'>Joueurs</li></a>
                 <a href="{{ path('admin_teams') }}"><li id='select_teams'>Équipes</li></a>
                 <a href="{{ path('admin_results') }}"><li id='select_results'>Résultats</li></a>
-                <a href="{{ path('admin_events') }}"><li id='select_events'>Évenements</li></a>
+                <a href="{{ path('admin_events') }}"><li id='select_events'>Événements</li></a>
             </ul>
         </div>
     </aside>
