--- a/templates/admin/events.html.twig
+++ b/templates/admin/events.html.twig
@@ -9,7 +9,7 @@
     <div class="full-height flex align-items-center">
         {{ include ("include/_admin_sidepanel.html.twig") }}
         <main class="col-md-8 full-height">
-            <h1 class='display-1 text-center'>PANNEAU D'ADMINISTRATION</h1>
+            {{ include('include/_admin_title.html.twig') }}
                 <div class="card">
                 <h1 class="display-2">Gestion des Évenements</h1>
                 <table class="table table-striped table-dark table-hover">
@@ -81,11 +81,12 @@
                         </tr>
                     {% else %}
                         <tr>
-                            <td colspan="9">Pas d'évenements trouvés.</td>
+                            <td colspan="9">Aucun événement trouvé.
+                                Cliquez sur le bouton ci-dessous pour commencer à en renseigner !</td>
                         </tr>
                     {% endfor %}
                 </table>
-                <button class='btn btn-primary clickable' onclick="window.location='#'">Créer un nouvel Évenement</button>
+                <button class='btn btn-primary clickable' onclick="window.location='#'">Créer un nouvel Évènement</button>
                 </div>
         </main>
     </div>
