--- a/templates/admin/news.html.twig
+++ b/templates/admin/news.html.twig
@@ -9,7 +9,7 @@
     <div class="full-height flex align-items-center">
         {{ include ("include/_admin_sidepanel.html.twig") }}
         <main class="col-md-8 full-height">
-            <h1 class='display-1 text-center'>PANNEAU D'ADMINISTRATION</h1>
+            {{ include('include/_admin_title.html.twig') }}
                 <div class="card">
                 <h1 class="display-2">Gestion des News</h1>
                 <table class="table table-striped table-dark table-hover">
@@ -88,7 +88,8 @@
                         </tr>
                     {% else %}
                         <tr>
-                            <td colspan="9">Pas de news trouvées.</td>
+                            <td colspan="9">Aucune news trouvée.
+                                Cliquez sur le bouton ci-dessous pour commencer à en ajouter !</td>
                         </tr>
                     {% endfor %}
                 </table>
