--- a/templates/admin/results.html.twig
+++ b/templates/admin/results.html.twig
@@ -9,7 +9,7 @@
     <div class="full-height flex align-items-center">
         {{ include ("include/_admin_sidepanel.html.twig") }}
         <main class="col-md-8 full-height">
-            <h1 class='display-1 text-center'>PANNEAU D'ADMINISTRATION</h1>
+            {{ include('include/_admin_title.html.twig') }}
                 <div class="card">
                 <h1 class="display-2">Gestion des Résultats</h1>
                 <p class='display-5 text-center'>/!\ Under construction /!\</p>
