--- a/templates/admin/users.html.twig
+++ b/templates/admin/users.html.twig
@@ -8,7 +8,7 @@
     <div class="full-height flex align-items-center">
         {{ include ("include/_admin_sidepanel.html.twig") }}
         <main class="col-md-8 full-height">
-            <h1 class='display-1 text-center'>PANNEAU D'ADMINISTRATION</h1>
+            {{ include('include/_admin_title.html.twig') }}
                 <div class="card">
                 <h1 class="display-2">Gestion des Utilisateurs</h1>
                 <table class="table table-striped table-dark table-hover">
@@ -63,7 +63,7 @@
                         </tr>
                     {% else %}
                         <tr>
-                            <td colspan="9">Pas d'utilisateur trouvé</td>
+                            <td colspan="9">Aucun utilisateur trouvé</td>
                         </tr>
                     {% endfor %}
                 </table>
