Added/adjusted includes for admin panel

--- a/templates/include/_admin_sidepanel.html.twig
+++ b/templates/include/_admin_sidepanel.html.twig
@@ -1,9 +1,9 @@
-{% block header %}
+{% block sidepanel %}
     <aside class="col-md-3">
         <div class="sidebar">
             <ul>
                 <a href="{{ path('admin_users') }}"><li id='select_users'>Utilisateurs</li></a>
-                <a href="#"><li id='select_staff'>Staff</li></a>
+                <a href="{{ path('admin_staff') }}"><li id='select_staff'>Staff</li></a>
                 <a href="{{ path('admin_news') }}"><li id='select_news'>News</li></a>
                 <a href="#"><li id='select_players'>Joueurs</li></a>
                 <a href="{{ path('admin_teams') }}"><li id='select_teams'>Équipes</li></a>
