--- a/templates/include/_admin_sidepanel.html.twig
+++ b/templates/include/_admin_sidepanel.html.twig
@@ -5,7 +5,7 @@
                 <a href="{{ path('admin_users') }}"><li id='select_users'>Utilisateurs</li></a>
                 <a href="{{ path('admin_staff') }}"><li id='select_staff'>Staff</li></a>
                 <a href="{{ path('admin_news') }}"><li id='select_news'>News</li></a>
-                <a href="#"><li id='select_players'>Joueurs</li></a>
+                <a href="{{ path('admin_players') }}"><li id='select_players'>Joueurs·euses</li></a>
                 <a href="{{ path('admin_teams') }}"><li id='select_teams'>Équipes</li></a>
                 <a href="{{ path('admin_results') }}"><li id='select_results'>Résultats</li></a>
                 <a href="{{ path('admin_events') }}"><li id='select_events'>Événements</li></a>
