--- a/templates/admin/events.html.twig
+++ b/templates/admin/events.html.twig
@@ -11,7 +11,7 @@
         <main class="col-md-8 full-height">
             {{ include('include/_admin_title.html.twig') }}
                 <div class="card">
-                <h1 class="display-2">Gestion des Évenements</h1>
+                <h1 class="display-2">Gestion des Événements</h1>
                 <table class="table table-striped table-dark table-hover">
                     <thead>
                         <tr>
@@ -27,7 +27,8 @@
                     </thead>
                     <tbody id="table_body">
                     {% for event in eventRepository %}
-                        <tr class='clickable' onclick="window.location='{{ path('admin_event', {'id': event.id}) }}'">
+                        <tr onclick="window.location='{{ path('admin_events', {'id': event.id}) }}'"
+                            style='cursor: pointer;'>
                             <td>{{ event.id }}</td>
                             <td>
                             {% if event.user_id|default %}
